aemedge/blocks/modal/modal.css
body.modal-open {
    overflow: hidden;
  }

  .modal dialog {
    --dialog-border-radius: 0px; /* Allow later border radius adjustment for dialog modals */

    overscroll-behavior: none;
    border: 1px solid var(--dark-color);
    border-radius: var(--dialog-border-radius);
    width: 100vw;
    max-width: 100%;
    margin: 0 auto;

      p, li {
        font-size: 1em;
        line-height: 1.5;
      }

      h2 strong{
      font-weight: 700;
    }
  }

  .modal dialog .modal-content {
    overflow-y: auto;
    overscroll-behavior: none;
    scrollbar-width: none; /* Supress visible scrollbar when table doesn't fit dialog modal, but still allow scrolling */
    max-height: calc(100dvh - 60px);
  }

    .modal dialog .modal-content .table-container .default-content-wrapper{
    position: sticky;
    top: 0;
    padding-top:26px;
    height: 150px;
    text-align: center;
    background: canvas;
    }

    .modal dialog .modal-content .table-container .default-content-wrapper p {
    line-height: 1.1;
    margin-top: 12px;
  }

  @media (width >= 768px) {
    .modal dialog {
      padding: 30px;
      width: 80vw;
      max-width: 960px;
      margin: auto;
      overflow: hidden;
    }

    .modal dialog .modal-content {
      max-height: calc(100vh - 90px);
    }

    .modal dialog .modal-content .table-container .default-content-wrapper{
      position: sticky;
      top: 0;
      background: canvas;
    }
  } 

  .modal dialog::backdrop {
    background-color: rgb(0 0 0 / 50%);
  }

  .modal .close-button {
    all:unset;
    position: absolute;
    top: 0;
    right: 0;
    width: 20px;
    border-radius: 0 var(--dialog-border-radius) 0 0;
    background-color: unset;
    text-overflow: clip;
    margin: 0;
    border: none;
    padding: 14px 16px;
  }

  .modal .close-button img{
    height: 20px;
    width: 20px;
  }


  .modal dialog .section {
    padding: 0;
  }

